--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 </head>
 
- <body onload="parent.location='www.amazon.co.jp/s?me=A22LZKZ9JS7Y2B&marketplaceID=A1VC38T7YXB528' "> 
+ <body onload="parent.location='https://www.amazon.co.jp/s?me=A22LZKZ9JS7Y2B&marketplaceID=A1VC38T7YXB528' "> 
 
 </body>
 
